Implement crud for api key